--- a/local.conf
+++ b/local.conf
@@ -87,6 +87,7 @@ MACHINE ?= "qemuarm64"
 # these defaults.
 #
 DISTRO ?= "poky"
+DISTRO = "testdistro"
 # As an example of a subclass there is a "bleeding" edge policy configuration
 # where many versions are set to the absolute latest code from the upstream 
 # source control systems. This is just mentioned here as an example, its not
@@ -105,7 +106,7 @@ DISTRO ?= "poky"
 #  - 'package_rpm' for rpm style packages
 # E.g.: PACKAGE_CLASSES ?= "package_rpm package_deb package_ipk"
 # We default to rpm:
-PACKAGE_CLASSES ?= "package_deb"
+PACKAGE_CLASSES ?= "package_rpm"
 
 #
 # SDK target architecture
@@ -140,7 +141,7 @@ PACKAGE_CLASSES ?= "package_deb"
 # There are other application targets that can be used here too, see
 # meta/classes/image.bbclass and meta/classes/core-image.bbclass for more details.
 # We default to enabling the debugging tweaks.
-EXTRA_IMAGE_FEATURES ?= "debug-tweaks package-management"
+EXTRA_IMAGE_FEATURES ?= "debug-tweaks"
 
 #
 # Additional image features
@@ -270,7 +271,7 @@ CONF_VERSION = "1"
 ###############test_conf###################
 
 # Limite le nombre de threads lors du build
-#BB_NUMBER_THREADS="4"
+BB_NUMBER_THREADS="4"
 
 # rm tmp work
 #INHERIT += "rm_work"
